--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,40 @@
 
 	<name>SqlServer Profiler</name>
 	<url>http://maven.apache.org</url>
+	
+	<description>SqlServer profiler java console</description>
 
+	<developers>
+		<developer>
+			<id>guolei</id>
+			<name>郭磊</name>
+			<url>www.gdxsoft.com</url>
+			<email>guolei@gdxsoft.com</email>
+		</developer>
+		<developer>
+			<id>jinzhappeng</id>
+			<name>靳朝鹏</name>
+			<email>jinzhaopeng@126.com</email>
+		</developer>
+	</developers>
+	<organization>
+		<name>gdxsoft</name>
+		<url>www.gdxsoft.com</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>https://github.com/gdx1231/emp-sqlserver-profiler/blob/main/LICENSE</url>
+			<distribution>repo</distribution>
+			<comments>MIT license</comments>
+		</license>
+	</licenses>
+	<!-- The scm url must start with 'scm:' -->
+	<scm>
+		<url>https://github.com/gdx1231/emp-sqlserver-profiler</url>
+		<connection>scm:git:https://github.com/gdx1231/emp-sqlserver-profiler</connection>
+		<developerConnection>scm:git:git@github.com:gdx1231/emp-sqlserver-profiler.git</developerConnection>
+	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
@@ -64,6 +97,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.2.3</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
@@ -85,12 +124,7 @@
 			<scope>test</scope>
 		</dependency>
 		-->
-		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
-			<scope>test</scope>
-		</dependency>
+		
 	</dependencies>
 
 	<build>
@@ -182,4 +216,73 @@
 			</plugin>
 		</plugins>
 	</build>
+	<profiles>
+		<profile>
+			<id>release</id> <!-- 部署要用到 -->
+			<build>
+				<plugins>
+					<!-- Source -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-source-plugin</artifactId>
+						<version>3.2.1</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jar-no-fork</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+					<!-- Javadoc -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<version>3.2.0</version>
+						<executions>
+							<execution>
+								<phase>package</phase>
+								<goals>
+									<goal>jar</goal>
+								</goals>
+							</execution>
+						</executions>
+						<configuration>
+							<encoding>UTF-8</encoding>
+							<charset>UTF-8</charset>
+							<additionalOptions>
+								<additionalOption>-Xdoclint:none</additionalOption>
+							</additionalOptions>
+						</configuration>
+					</plugin>
+					<!-- GPG -->
+					<plugin>
+						<!-- 进行延签 -->
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<version>1.6</version>
+						<executions>
+							<execution>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+			<distributionManagement>
+				<snapshotRepository>
+					<id>oss</id>
+					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+				</snapshotRepository>
+				<repository>
+					<id>oss</id>
+					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+				</repository>
+			</distributionManagement>
+		</profile>
+	</profiles>
 </project>
