--- a/src/main/resources/com/gdxsoft/sqlProfiler/hsqldb/hsqldb.properties
+++ b/src/main/resources/com/gdxsoft/sqlProfiler/hsqldb/hsqldb.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.6.1
-#Fri Jun 17 11:00:18 CST 2022
-tx_timestamp=459689
-modified=yes
+#Sun Jun 26 16:54:34 CST 2022
+tx_timestamp=459826
+modified=no
 version=2.6.1
