--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
 		<dependency>
 			<groupId>com.gdxsoft.easyweb</groupId>
 			<artifactId>emp-script</artifactId>
-			<version>[1.1.5]</version>
+			<version>[1.1.8,]</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.jodconverter</groupId>
@@ -81,7 +81,7 @@
 		<dependency>
 			<groupId>com.gdxsoft.easyweb</groupId>
 			<artifactId>emp-script-utils</artifactId>
-			<version>[1.1.5]</version>
+			<version>[1.1.8,]</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.apache.httpcomponents</groupId>
@@ -194,7 +194,7 @@
 						<id>copy-lib-src-webapps</id>
 						<phase>package</phase>
 						<configuration>
-							<tasks>
+							<target>
 								<echo>copy ${project.build.finalName}.jar to ${basedir}/../../workspace.newVersion/allclass/lib/</echo>
 								<copy todir="${basedir}/../../workspace.newVersion/allclass/lib/">
 									<fileset dir="${project.build.directory}">
@@ -207,7 +207,7 @@
 										<include name="*" />
 									</fileset>
 								</copy>
-							</tasks>
+							</target>
 						</configuration>
 						<goals>
 							<goal>run</goal>
