--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.gdxsoft</groupId>
@@ -31,7 +33,8 @@
 	<licenses>
 		<license>
 			<name>MIT License</name>
-			<url>https://github.com/gdx1231/emp-sqlserver-profiler/blob/main/LICENSE</url>
+			<url>
+				https://github.com/gdx1231/emp-sqlserver-profiler/blob/main/LICENSE</url>
 			<distribution>repo</distribution>
 			<comments>MIT license</comments>
 		</license>
@@ -40,7 +43,8 @@
 	<scm>
 		<url>https://github.com/gdx1231/emp-sqlserver-profiler</url>
 		<connection>scm:git:https://github.com/gdx1231/emp-sqlserver-profiler</connection>
-		<developerConnection>scm:git:git@github.com:gdx1231/emp-sqlserver-profiler.git</developerConnection>
+		<developerConnection>
+			scm:git:git@github.com:gdx1231/emp-sqlserver-profiler.git</developerConnection>
 	</scm>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -100,10 +104,11 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.2.3</version>
+			<version>1.2.13</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<!--
+		https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
@@ -147,6 +152,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.6.1</version>
 				<executions>
 					<execution>
 						<id>copy</id>
@@ -156,7 +162,10 @@
 						</goals>
 						<configuration>
 							<outputDirectory>${project.build.directory}/lib</outputDirectory>
-
+							<excludeTransitive>false</excludeTransitive>
+							<stripVersion>false</stripVersion>
+							<excludeArtifactIds>*</excludeArtifactIds>
+							<includeScope>runtime</includeScope>
 						</configuration>
 					</execution>
 				</executions>
@@ -177,7 +186,8 @@
 						</goals>
 						<configuration>
 							<encoding>utf-8</encoding>
-							<outputDirectory>${basedir}/../../workspace.newVersion/allclass/classes</outputDirectory>
+							<outputDirectory>
+								${basedir}/../../workspace.newVersion/allclass/classes</outputDirectory>
 							<resources>
 								<resource>
 									<directory>${basedir}/target/classes</directory>
@@ -196,15 +206,24 @@
 						<phase>package</phase>
 						<configuration>
 							<target>
-								<echo>copy ${project.build.finalName}.jar to ${basedir}/../../workspace.newVersion/allclass/lib/</echo>
-								<copy todir="${basedir}/../../workspace.newVersion/allclass/lib/">
+								<echo>
+									copy ${project.build.finalName}.jar to
+									${basedir}/../../workspace.newVersion/allclass/lib/</echo>
+								<copy
+									todir="${basedir}/../../workspace.newVersion/allclass/lib/">
 									<fileset dir="${project.build.directory}">
-										<include name="${project.build.finalName}*" />
+										<include
+											name="${project.build.finalName}*" />
 									</fileset>
 								</copy>
-								<echo>copy ${project.build.finalName}/classes/* to ${basedir}/../../workspace.newVersion/allclass/classes/</echo>
-								<copy todir="${basedir}/../../workspace.newVersion/allclass/classes/">
-									<fileset dir="${project.build.directory}/classes">
+								<echo>
+									copy ${project.build.finalName}/classes/*
+									to
+									${basedir}/../../workspace.newVersion/allclass/classes/</echo>
+								<copy
+									todir="${basedir}/../../workspace.newVersion/allclass/classes/">
+									<fileset
+										dir="${project.build.directory}/classes">
 										<include name="*" />
 									</fileset>
 								</copy>
@@ -217,6 +236,36 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[1.0.0,)</versionRange>
+										<goals>
+											<goal>copy-dependencies</goal>
+											<goal>unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
 	</build>
 
 	<profiles>
@@ -235,11 +284,13 @@
 							</descriptorRefs>
 							<archive>
 								<manifest>
-									<mainClass>com.gdxsoft.sqlProfiler.ProfilerControl</mainClass>
+									<mainClass>
+										com.gdxsoft.sqlProfiler.ProfilerControl</mainClass>
 								</manifest>
 							</archive>
-							<outputDirectory>${project.build.directory}/onepackage</outputDirectory>
-							<finalName>${project.build.finalName}.onepackage</finalName>    
+							<outputDirectory>
+								${project.build.directory}/onepackage</outputDirectory>
+							<finalName>${project.build.finalName}.onepackage</finalName>
 						</configuration>
 						<executions>
 							<execution>
@@ -317,11 +368,13 @@
 			<distributionManagement>
 				<snapshotRepository>
 					<id>oss</id>
-					<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+					<url>
+						https://oss.sonatype.org/content/repositories/snapshots/</url>
 				</snapshotRepository>
 				<repository>
 					<id>oss</id>
-					<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+					<url>
+						https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
 				</repository>
 			</distributionManagement>
 		</profile>
