--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.2.13</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<!--
